--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>wniemiec.util.data</groupId>
+  <groupId>wniemiec.data.java</groupId>
   <artifactId>session</artifactId>
   <version>1.0.0</version>
 
   <name>Session</name>
   <description>Session manager that stores information obtained at run time.</description>
-  <url>https://github.com/wniemiec-util-data/session</url>
+  <url>https://github.com/wniemiec-data-java/session</url>
 
   <properties>
     <version.major>1</version.major>
@@ -34,16 +34,16 @@
   </developers>
 
   <scm>
-    <connection>scm:git:git@github.com:wniemiec-util-data/session.git</connection>
-    <developerConnection>scm:git:ssh://github.com:wniemiec-util-data/session.git</developerConnection>
-    <url>https://github.com/wniemiec-util-data/session/tree/main</url>
+    <connection>scm:git:git@github.com:wniemiec-data-java/session.git</connection>
+    <developerConnection>scm:git:ssh://github.com:wniemiec-data-java/session.git</developerConnection>
+    <url>https://github.com/wniemiec-data-java/session/tree/main</url>
   </scm>
 
   <distributionManagement>
     <repository>
-      <id>github-wniemiec-util-data-session</id>
-      <name>GitHub wniemiec-util-data Apache Maven Packages</name>
-      <url>https://maven.pkg.github.com/wniemiec-util-data/session</url>
+      <id>github-wniemiec-data-java-session</id>
+      <name>GitHub wniemiec-data-java Apache Maven Packages</name>
+      <url>https://maven.pkg.github.com/wniemiec-data-java/session</url>
     </repository>
   </distributionManagement>
 
